--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.org/"
+baseurl = ""
 title = "Puntadas Creativas"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
